--- a/src/components/CreatePlan/Day/Day.module.css
+++ b/src/components/CreatePlan/Day/Day.module.css
@@ -1,6 +1,14 @@
-.dayContainer {
+.daysContainer {
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+}
+.daysContainer li {
+  list-style: none;
+  padding: 15px 10px;
+  width: 100%;
+  border-bottom: 1px solid;
 }
 
 .dayHeader {
