--- a/src/components/Plan/Plan.module.css
+++ b/src/components/Plan/Plan.module.css
@@ -1,10 +1,7 @@
-.btnBack {
-  position: fixed;
-  font-size: 1.2em;
-  line-height: 56px;
-  padding: 0 10px;
-  top: 0px;
-  left: 20px;
-  color: white;
-  z-index: 1300;
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  margin: 30px auto;
 }
