--- a/src/components/Plans/Plans.module.css
+++ b/src/components/Plans/Plans.module.css
@@ -1,7 +1,14 @@
-.title {
-  margin: 30px 0 0 10px;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 90%;
+  max-width: 700px;
+  margin: 0 auto;
 }
-.subtitle {
-  margin: 5px 0 0 10px;
-  opacity: 0.5;
+
+.container a {
+  margin: 10px 10px;
+  height: 150px;
+  width: 280px;
 }
